--- a/Ls1/ls1.html
+++ b/Ls1/ls1.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container-fluid p-0">
         <div class="row">
-            <div class="col-md-2 p-0">
+            <div class="col-md-2">
                 <div class="sidebar">
                     <div class="wrap">
                         <ul>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-10 p-0">
+            <div class="col-md-10">
                 <div>
                     <img src="logoNCC 1.png" alt="" class="img">
                 </div>
